# infer-check

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  codecov.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: coverage.yml  docs.yml  release.yml
backends/: index.html
commands/compare/: index.html
commands/determinism/: index.html
commands/diff/: index.html
commands/report/: index.html
commands/stress/: index.html
commands/sweep/: index.html
docs/: backends.md  getting-started.md  index.md  interpreting-results.md
docs/commands/: compare.md  determinism.md  diff.md  report.md  stress.md  sweep.md
getting-started/: index.html
interpreting-results/: index.html
prompt-suites/: adversarial-numerics.jsonl  determinism.jsonl  long-context.jsonl  reasoning.jsonl
search/: search_index.json
src/infer_check/: __init__.py  cli.py  resolve.py  runner.py  types.py  utils.py
src/infer_check/analysis/: __init__.py  answer_extract.py  clustering.py  determinism.py  divergence.py
src/infer_check/backends/: __init__.py  base.py  llama_cpp.py  mlx_lm.py  openai_compat.py  vllm_mlx.py
src/infer_check/prompt_suites/: __init__.py  adversarial-numerics.jsonl  code.jsonl  determinism.jsonl  long-context.jsonl  quant-sensitive.jsonl  reasoning.jsonl
src/infer_check/reporting/: __init__.py  github_issue.py  html.py  json_export.py
src/infer_check/suites/: __init__.py  loader.py
stylesheets/: extra.css
tests/unit/: test_answer_extract.py  test_cli.py  test_cli_diff.py  test_cli_max_tokens.py  test_cli_num_prompts.py  test_cli_parsing.py  test_clustering.py  test_compare.py  test_divergence.py  test_kl_alignment.py  test_llama_cpp_fallback.py  test_llama_cpp_payload.py  test_loader.py  test_loader_distribution.py  test_mlx_backend.py  test_openai_compat.py  test_resolve.py  test_runner.py  test_types.py  test_utils.py
